# zig-fetch-py

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
examples/: example.zon  nested_test.zon  simple.zon  simple_example.py  simple_nested.zon  test.zon  tuple_test.zon  zig_tuples.zon
tests/: test_downloader.py  test_parser.py
zig_fetch_py/: __init__.py  __main__.py  downloader.py  main.py  parser.py
